# moon-robot

./: .gitignore  .pre-commit-config.yaml  README.md  project.MD  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docker/: Dockerfile
src/: main.py
src/api/v1/endpoints/: commands.py  status.py
src/models/: database.py  robot.py
src/robot/: main.py
src/robot/api/v1/: router.py
src/robot/api/v1/endpoints/: commands.py  status.py  test.py
src/robot/core/: config.py  logging.py
src/robot/models/: robot.py
src/robot/services/: command_processor.py  database.py  init_db.py
src/services/: command_processor.py  database.py  init_db.py
tests/: conftest.py  factories.py
tests/api/: test_commands.py  test_status.py
tests/api/v1/endpoints/: test_commands.py
tests/models/: test_database_models.py  test_robot.py
tests/services/: test_command_processor.py
